--- a/Travel Crew/destinations.html
+++ b/Travel Crew/destinations.html
@@ -107,72 +107,72 @@ nav ul li a {
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href="./index.html" target="_blank">Home</a></li>
-                <li><a href="aboutUs.html" target="_blank">About Us</a></li>
-                <li><a href="./login.html" target="_blank">Log In / Sign Up</a></li>
+                <li><a href="./index.html" >Home</a></li>
+                <li><a href="aboutUs.html" >About Us</a></li>
+                <li><a href="./login.html" >Log In / Sign Up</a></li>
             </ul>
         </nav>
     </header>
     <p class="heading"><b>Destinations</b></p>
 <div class="main1">
-    <a href="States/J&K.html" target="_blank"><div class="box1">
+    <a href="States/J&K.html" ><div class="box1">
         <img id="b1" src="Images/States/Jammu & Kashmir/main.jpg" alt="">
         <h1>Jammu & Kashmir</h1>
     </div></a>
-    <a href="States/Uttarakhand.html" target="_blank"><div class="box1">
-        <img id="b2" src="Images/States/Uttarakhand/main.JPG" alt="">
+    <a href="States/Uttarakhand.html" ><div class="box1">
+        <img id="b2" src="Images/States/Uttarakhand/tungnath.jpg" alt="">
         <h1>Uttarakhand</h1>
     </div></a>
-    <a href="States/Himachal.html" target="_blank"><div class="box1">
+    <a href="States/Himachal.html" ><div class="box1">
         <img id="b3" src="Images/States/Himachal Pradesh/main.jpg" alt="">
         <h1>Himachal Pradesh</h1>
     </div></a>
-    <a href="States/Rajasthan.html" target="_blank"><div class="box1">
+    <a href="States/Rajasthan.html" ><div class="box1">
         <img id="b4" src="Images/States/Rajasthan/main.jpeg" alt="">
         <h1>Rajasthan</h1>
     </div></a>
-    <a href="States/Uttarpradesh.html" target="_blank"><div class="box1">
+    <a href="States/Uttarpradesh.html" ><div class="box1">
         <img id="b5" src="Images/States/Uttarpradesh/main.jpg" alt="">
         <h1>Uttar Pradesh</h1>
     </div></a>
 </div>
 <div class="main2">
-    <a href="States/Madhyapradesh.html" target="_blank"><div class="box1">
+    <a href="States/Madhyapradesh.html" ><div class="box1">
         <img id="b6" src="Images/States/Madhyapradesh/main.jpg" alt="">
         <h1>Madhya Pradesh</h1>
     </div></a>
-    <a href="States/Maharashtra.html" target="_blank"><div class="box1">
+    <a href="States/Maharashtra.html" ><div class="box1">
         <img id="b7" src="Images/States/Maharashtra/main.jpg" alt="">
         <h1>Maharashtra</h1>
     </div></a>
-    <a href="States/Sikkim.html" target="_blank"><div class="box1">
+    <a href="States/Sikkim.html" ><div class="box1">
         <img id="b8" src="Images/States/Sikkim/main.jpg" alt="">
         <h1>Sikkim</h1>
     </div></a>
-    <a href="States/Kerala.html" target="_blank"><div class="box1">
+    <a href="States/Kerala.html" ><div class="box1">
         <img id="b9" src="Images/States/Goa/main.jpg" alt="">
         <h1>Kerala</h1>
     </div></a>
-    <a href="States/Assam.html" target="_blank"><div class="box1">
+    <a href="States/Assam.html" ><div class="box1">
         <img id="b10" src="Images/States/Assam/main.jpg" alt="">
         <h1>Assam</h1>
     </div></a>
 </div>
 
 <div class="main2">
-    <a href="States/Andaman.html" target="_blank"><div class="box1">
+    <a href="States/Andaman.html" ><div class="box1">
         <img id="b6" src="Images/States/Andaman & Nicobar/main.jpg" alt="">
         <h1>Andaman & Nicobar</h1>
     </div></a>
-    <a href="States/Lakshadweep.html" target="_blank"><div class="box1">
+    <a href="States/Lakshadweep.html" ><div class="box1">
         <img id="b7" src="Images/States/Laksadweep/main.jpg" alt="">
         <h1>Lakshdweep</h1>
     </div></a>
-    <a href="States/Tamilnadu.html" target="_blank"><div class="box1">
+    <a href="States/Tamilnadu.html" ><div class="box1">
         <img id="b8" src="Images/States/Tamilnadu/main.jpg" alt="">
         <h1>Tamilnadu</h1>
     </div></a>
-    <a href="States/Meghalaya.html" target="_blank"><div class="box1">
+    <a href="States/Meghalaya.html" ><div class="box1">
         <img id="b8" src="Images/States/Meghalaya/main.jpg" alt="">
         <h1>Meghalaya</h1>
     </div></a>
