--- a/Travel Crew/destinations.html
+++ b/Travel Crew/destinations.html
@@ -115,7 +115,7 @@ nav ul li a {
     </header>
     <p class="heading"><b>Destinations</b></p>
 <div class="main1">
-    <a href="States/J&K.html" ><div class="box1">
+    <a href="States/jammu.html" ><div class="box1">
         <img id="b1" src="Images/States/Jammu & Kashmir/main.jpg" alt="">
         <h1>Jammu & Kashmir</h1>
     </div></a>
