--- a/Travel Crew/destinations.html
+++ b/Travel Crew/destinations.html
@@ -115,14 +115,14 @@ nav ul li a {
     </header>
     <p class="heading"><b>Destinations</b></p>
 <div class="main1">
-    <a href="States/jammu.html" ><div class="box1">
+    <!--<a href="States/jammu.html" ><div class="box1">
         <img id="b1" src="Images/States/Jammu & Kashmir/main.jpg" alt="">
         <h1>Jammu & Kashmir</h1>
     </div></a>
     <a href="States/Uttarakhand.html" ><div class="box1">
         <img id="b2" src="Images/States/Uttarakhand/nainital.jpg" alt="">
         <h1>Uttarakhand</h1>
-    </div></a>
+    </div></a>-->
     <a href="States/Himachal.html" ><div class="box1">
         <img id="b3" src="Images/States/Himachal Pradesh/main.jpg" alt="">
         <h1>Himachal Pradesh</h1>
@@ -135,15 +135,15 @@ nav ul li a {
         <img id="b5" src="Images/States/Uttarpradesh/main.jpg" alt="">
         <h1>Uttar Pradesh</h1>
     </div></a>
+    <a href="States/Maharashtra.html" ><div class="box1">
+        <img id="b7" src="Images/States/Maharashtra/main.jpg" alt="">
+        <h1>Maharashtra</h1>
+    </div></a>
 </div>
 <div class="main2">
     <a href="States/Madhyapradesh.html" ><div class="box1">
         <img id="b6" src="Images/States/Madhyapradesh/main.jpg" alt="">
         <h1>Madhya Pradesh</h1>
-    </div></a>
-    <a href="States/Maharashtra.html" ><div class="box1">
-        <img id="b7" src="Images/States/Maharashtra/main.jpg" alt="">
-        <h1>Maharashtra</h1>
     </div></a>
     <a href="States/Sikkim.html" ><div class="box1">
         <img id="b8" src="Images/States/Sikkim/main.jpg" alt="">
