--- a/Travel Crew/States/Kerala.html
+++ b/Travel Crew/States/Kerala.html
@@ -115,6 +115,8 @@
             <h3 style="color: #ff4646;">₹3499</h3>
             <br><br>
             <a href="../States Trip Details/Kerala/mun-all-koc.html" target="_blank"><button>Quick Details >></button></a>
+            <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
         <div class="box1">
             <img id="b2" src="../Images/States/Kerala/thekkady.jpg" alt="">
@@ -125,6 +127,8 @@
             <h3 style="color: #ff4646;">₹3499</h3>
             <br><br>
             <a href="../States Trip Details/Kerala/mun-the-all-koc.html" target="_blank"><button>Quick Details >></button></a>
+            <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
     </div>
 </body>
