--- a/Travel Crew/States/Meghalaya.html
+++ b/Travel Crew/States/Meghalaya.html
@@ -115,6 +115,8 @@
             <h3 style="color: #ff4646;">₹6999</h3>
             <br><br>
             <a href="../States Trip Details/Meghalaya/meghalaya.html" target="_blank"><button>Quick Details >></button></a>
+            <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
     </div>
 
