--- a/Travel Crew/States/jammu.html
+++ b/Travel Crew/States/jammu.html
@@ -113,6 +113,8 @@
         <h3 style="color: #ff4646;">₹5999</h3>
         <br><br>
         <a href="../States Trip Details/Jammu/Sri-Gul-Son.html" target="_blank"><button>Quick Details >></button></a>
+        <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
         <div class="box1">
             <img id="b2" src="../Images/States/Jammu & Kashmir/pahalgam.jpg" alt="">
@@ -123,6 +125,8 @@
         <h3 style="color: #ff4646;">₹5999</h3>
         <br><br>
         <a href="../States Trip Details/Jammu/Sri-Gul-Son-Pah.html" target="_blank"><button>Quick Details >></button></a>
+        <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
         <div class="box1">
             <img id="b4" src="../Images/States/Jammu & Kashmir/vaishno devi.jpg" alt="">
@@ -133,6 +137,8 @@
         <h3 style="color: #ff4646;">₹5999</h3>
         <br><br>
         <a href="../States Trip Details/Jammu/VaihnoDevi.html" target="_blank"><button>Quick Details >></button></a>
+        <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
     </div>
 </body>
