--- a/Travel Crew/States/Andaman.html
+++ b/Travel Crew/States/Andaman.html
@@ -115,10 +115,11 @@
             <h3 style="color: #ff4646;">₹6999</h3>
             <br><br>
             <a href="../States trip Details/Andaman/andaman.html" target="_blank"><button>Quick Details >></button></a>
+            <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
     </div>
 
     
 </body>
-
 </html>
