--- a/Travel Crew/States/Himachal.html
+++ b/Travel Crew/States/Himachal.html
@@ -114,6 +114,8 @@
             <h3 style="color: #ff4646;">₹6999</h3>
             <br><br>
             <a href="../States Trip Details/Himachal Pradesh/Man-Kas-Sol.html" target="_blank"><button>Quick Details >></button></a>
+            <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
         <div class="box1">
             <img id="b2" src="../Images/States/Himachal Pradesh/khajjiar.jpg" alt="">
@@ -124,6 +126,8 @@
             <h3 style="color: #ff4646;">₹3499</h3>
             <br><br>
             <a href="../States Trip Details/Himachal Pradesh/Dal-Kha.html" target="_blank"><button>Quick Details >></button></a>
+            <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
         <div class="box1">
             <img id="b3" src="../Images/States/Himachal Pradesh/shimla.jpg" alt="">
@@ -134,6 +138,8 @@
             <h3 style="color: #ff4646;">₹5499</h3>
             <br><br>
             <a href="../States Trip Details/Himachal Pradesh/Shi-Kuf-Cha.html" target="_blank"><button>Quick Details >></button></a>
+            <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
     </div>
 
@@ -147,6 +153,8 @@
             <h3 style="color: #ff4646;">₹9999</h3>
             <br><br>
             <a href="../States Trip Details/Himachal Pradesh/Kas-Tos-Man.html" target="_blank"><button>Quick Details >></button></a>
+            <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
         <div class="box1">
             <img id="b4" src="../Images/States/Himachal Pradesh/kareri.jpg" alt="">
@@ -157,6 +165,8 @@
             <h3 style="color: #ff4646;">₹7999</h3>
             <br><br>
             <a href="../States Trip Details/Himachal Pradesh/Dha-Mcl-Kar-Pal.html" target="_blank"><button>Quick Details >></button></a>
+            <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
         <div class="box1">
             <img id="b4" src="../Images/States/Himachal Pradesh/spiti.jpg" alt="">
@@ -167,6 +177,8 @@
             <h3 style="color: #ff4646;">₹12999</h3>
             <br><br>
             <a href="../States Trip Details/Himachal Pradesh/EXC-winter.html" target="_blank"><button>Quick Details >></button></a>
+            <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
 
     </div>
