--- a/Travel Crew/States/Rajasthan.html
+++ b/Travel Crew/States/Rajasthan.html
@@ -115,6 +115,8 @@
                 <h3 style="color: #ff4646;">₹6999</h3>
                 <br><br>
                 <a href="../States Trip Details/Rajasthan/Jai-Udai-Jais.html" target="_blank"><button>Quick Details >></button></a>
+                <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
             </div>
             <div class="box1">
                 <img id="b2" src="../Images/States/Rajasthan/udaipur.jpg" alt="">
@@ -125,6 +127,8 @@
                 <h3 style="color: #ff4646;">₹3499</h3>
                 <br><br>
                 <a href="../States Trip Details/Rajasthan/Jai-Udai.html" target="_blank"><button>Quick Details >></button></a>
+                <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
             </div>
 </body>
 </html>
