--- a/Travel Crew/States/Uttarakhand.html
+++ b/Travel Crew/States/Uttarakhand.html
@@ -112,6 +112,8 @@
                 <h3 style="color: #ff4646;">₹9999</h3>
                 <br><br>
                 <a href="../States Trip Details/Uttarakhand/Kedarnath.html" target="_blank"><button>Quick Details ></button></a>
+                <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
             </div>
             <div class="box1">
                 <img id="b2" src="../Images/States/Uttarakhand/mussorie.jpg" alt="">
@@ -122,6 +124,8 @@
                 <h3 style="color: #ff4646;">₹3799</h3>
                 <br><br>
                 <a href="../States Trip Details/Uttarakhand/Deh-Mus-Ris_Har.html" target="_blank"><button>Quick Details >></button></a>
+                <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
             </div>
             <div class="box1">
                 <img id="b3" src="../Images/States/Uttarakhand/nainital.jpg" alt="">
@@ -132,6 +136,8 @@
                 <h3 style="color: #ff4646;">₹4799</h3>
                 <br><br>
                 <a href="../States Trip Details/Uttarakhand/Nain-Alm.html" target="_blank"><button>Quick Details >></button></a>
+                <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
             </div>
             <div class="box1">
                 <img id="b4" src="../Images/States/Uttarakhand/rishikesh.jpg" alt="">
@@ -142,6 +148,8 @@
                 <h3 style="color: #ff4646;">₹3999</h3>
                 <br><br>
                 <a href="../States Trip Details/Uttarakhand/Rish-Har.html" target="_blank"><button>Quick Details >></button></a>
+                <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
             </div>
         </div>
     </div>
@@ -156,6 +164,8 @@
             <h3 style="color: #ff4646;">₹5999</h3>
             <br><br>
             <a href="../States Trip Details/Uttarakhand/Kedarkantha.html" target="_blank"><button>Quick Details >></button></a>
+            <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
         <div class="box1">
             <img id="b2" src="../Images/States/Uttarakhand/gngA.jpg" alt="">
@@ -166,6 +176,8 @@
             <h3 style="color: #ff4646;">₹16999</h3>
             <br><br>
             <a href="../States Trip Details/Uttarakhand/Gaumukh.html" target="_blank"><button>Quick Details >></button></a>
+            <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
         <div class="box1">
             <img id="b3" src="../Images/States/Uttarakhand/tungnath.jpg" alt="">
@@ -176,6 +188,8 @@
             <h3 style="color: #ff4646;">₹4799</h3>
             <br><br>
             <a href="../States Trip Details/Uttarakhand/Chop-Tung.html" target="_blank"><button>Quick Details >></button></a>
+            <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
         <div class="box1">
             <img id="b4" src="../Images/States/Uttarakhand/valley.jpg" alt="">
@@ -186,6 +200,8 @@
             <h3 style="color: #ff4646;">₹3999</h3>
             <br><br>
             <a href="../States Trip Details/Uttarakhand/Valley-Flowers.html" target="_blank"><button>Quick Details >></button></a>
+            <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
         </div>
     </div>
 </div>
@@ -200,6 +216,8 @@
         <h3 style="color: #ff4646;">₹16999</h3>
         <br><br>
         <a href="../States Trip Details/Uttarakhand/Chardham.html" target="_blank"><button>Quick Details >></button></a>
+        <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
     </div>
     <div class="box1">
         <img id="b3" src="../Images/States/Uttarakhand/main.jpg" alt="">
@@ -210,6 +228,8 @@
         <h3 style="color: #ff4646;">₹20999</h3>
         <br><br>
         <a href="../States Trip Details/Uttarakhand/Chardham(Heli).html" target="_blank"><button>Quick Details >></button></a>
+        <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
     </div>
     <div class="box1">
         <img id="b4" src="../Images/States/Uttarakhand/har ki dhun.jpg" alt="">
@@ -220,6 +240,8 @@
         <h3 style="color: #ff4646;">₹3999</h3>
         <br><br>
         <a href="../States Trip Details/Uttarakhand/HarKiDhun.html" target="_blank"><button>Quick Details >></button></a>
+        <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
     </div>
     <div class="box1">
         <img id="b1" src="../Images/States/Uttarakhand/kuari pass.jpg" alt="">
@@ -230,6 +252,8 @@
         <h3 style="color: #ff4646;">₹5999</h3>
         <br><br>
         <a href="../States Trip Details/Uttarakhand/KuariPas.html" target="_blank"><button>Quick Details >></button></a>
+        <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
     </div>
 </div>
 </body>
