--- a/Travel Crew/States/Uttarpradesh.html
+++ b/Travel Crew/States/Uttarpradesh.html
@@ -114,6 +114,8 @@
                 <h3 style="color: #ff4646;">₹6999</h3>
                 <br><br>
                 <a href="../States Trip Details/Uttarpradesh/Var-Ayo.html" target="_blank"><button>Quick Details >></button></a>
+                <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
             </div>
             <div class="box1">
                 <img id="b2" src="../Images/States/Uttarpradesh/Vrindavan.jpg" alt="">
@@ -124,6 +126,8 @@
                 <h3 style="color: #ff4646;">₹3499</h3>
                 <br><br>
                 <a href="../States Trip Details/Uttarpradesh/Vri-Mat.html" target="_blank"><button>Quick Details >></button></a>
+                <br><br>
+            <a href="http://127.0.0.1:5500/Travel%20Crew/payment.html"><button>Book Trip</button></a>
             </div>
     </body>
     </html>
